--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-    <link rel="icon" type="image/kallol" href="/images/k.png">
+  <link rel="icon" type="image/kallol" href="/images/k.png">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
@@ -22,7 +22,8 @@
   <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body class="tutorial" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example " tabindex="0">
+<body class="tutorial" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+  data-bs-smooth-scroll="true" class="scrollspy-example " tabindex="0">
   <!-- =========Mouse Move=========== -->
   <main class="page">
     <div class="page__inner">
@@ -373,7 +374,7 @@
               <p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m.
                 Monday through Friday.</p>
               <ul>
-                <li><i class="fa-solid fa-location-dot"></i> Address: <span>Tangail, Dhaka, Bangladesh</span> </li>
+                <li><i class="fa-solid fa-location-dot"></i> Address: <span>Dhaka, Bangladesh</span> </li>
 
                 <li><i class="fa-solid fa-envelope"></i> Email: <a
                     href="mailto:kallolpandit466@gmail.com">kallolpandit466@gmail.com</a> </li>
